# coding

./: .gitignore  README.md
advent-of-code/2022/day-16/: code.go
advent-of-code/2023/day-01/: code.go
advent-of-code/2023/day-02/: code.go
advent-of-code/2023/day-03/: code.go
advent-of-code/2023/day-23/: code.go
capital-rx/: README.md
capital-rx/data/: nadac-comparison-04-17-2024.sample.csv
capital-rx/src/: data.py  main.py  report.py  test_report.py
ellipsis/: INSTRUCTIONS.md  README.md  ellipsis.go  go.mod
ellipsis-cache/internal/server/: server.go
ellipsis-cache/rust/: Cargo.toml
ellipsis-hash/: Cargo.toml  README.md
ellipsis-hash/src/: blake3.rs  main.rs
ellipsis/internal/processor/: processor.go
ellipsis/internal/server/: server.go
ellipsis/rust/src/: main.rs
helpful-human/: README.md  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json
helpful-human/challenge/: instructions.md
helpful-human/public/: index.html
helpful-human/src/: App.css  App.js  index.css
helpful-human/src/components/: Button.jsx  Content.jsx  Header.jsx  Label.jsx  Sidebar.jsx  Swatch.jsx  View.jsx
helpful-human/static/css/: main.e90f1c47.chunk.css  main.e90f1c47.chunk.css.map
helpful-human/static/js/: 2.6b431ce2.chunk.js  2.6b431ce2.chunk.js.map  3.9d7dc9ab.chunk.js  3.9d7dc9ab.chunk.js.map  main.bada6eb0.chunk.js  main.bada6eb0.chunk.js.map  runtime-main.6c38a145.js  runtime-main.6c38a145.js.map
