[package]
name = "ellipsis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
rust_decimal = "1.33.1"
csv = "1.3.0"
lazy_static = "1.4.0"
